--- a/03-Representation/biblio_representation.bib
+++ b/03-Representation/biblio_representation.bib
@@ -85,3 +85,10 @@
   year={2003},
   publisher={Cambridge university press}
 }
+
+@article{Theil1961EconomicFA,
+  title={Economic Forecasts And Policy Ed. 2nd},
+  author={Henri Theil and J. S. Cramer and A. Russchen and H. Moerman},
+  journal={Birchandra State Central Library,tripura},
+  year={1961}
+}
