--- a/main.tex
+++ b/main.tex
@@ -39,13 +39,17 @@
 \DeclareMathOperator{\sign}{sgn}
 \newtheorem{propriete}{Propriété}
 
+
+\newif\ifrelease
+
+
 %def path for files
 \input{Notations.tex}
-
 \begin{document}
 \dominitoc
 \input{titlepage}
 \tableofcontents
+
 \input{00-Introduction/Introduction}
 \mainmatter
 \input{01-Modularite/Modularite}
