makefile to generate review mode and draft mode

--- a/00-Introduction/Introduction.tex
+++ b/00-Introduction/Introduction.tex
@@ -1,4 +1,4 @@
 \section*{Introduction}
 
 
-Cette thèse propose une contruction d'une architecture modulaire
+\draft{Cette thèse propose une contruction d'une architecture modulaire blabkdefez}
