--- a/01-Modularite/Modularite.tex
+++ b/01-Modularite/Modularite.tex
@@ -12,13 +12,13 @@
 % - réseaux de neurones
 %%%%%%%%%%%%%%%%%%%%%%%%%
 
-Les systèmes d'information sont le fruit d'un travail de construction et de recherche, cherchant à créer de nouveaux comportements dans une architecture globale. En particulier, la recherche en systèmes d'intelligence artificielles cherche sans cesse à créer de nouvelles structures afin de générer des comportements. Nous introduisons des règles de calcul entre des modules plus simples qui sont des cartes auto-organisatrices. 
+\draft{Les systèmes d'information sont le fruit d'un travail de construction et de recherche, cherchant à créer de nouveaux comportements dans une architecture globale. En particulier, la recherche en systèmes d'intelligence artificielles cherche sans cesse à créer de nouvelles structures afin de générer des comportements. Nous introduisons des règles de calcul entre des modules plus simples qui sont des cartes auto-organisatrices. 
 
 Ces règles utilisent des propriétés topologiques des cartes de Kohonen et sont créées dans l'idée d'avoir un système décentralisé entre les cartes. On espère ainsi ouvrir les cartes de Kohonen à du calcul décentralisé. L'idée que l'interaction entre des cartes amène de nouveaux comportement n'est pas nouvelle: elle se base sur l'émergence de comportements dans les systèmes complexes.
 
 Un système complexe est un système dans lequel de nombreux composant interagissent de façon non-linéaire, avec des rétro-actions. De ce fait, il est difficile d'appréhender et de comprendre un tel système sans le simuler. Ces systèmes présentent notamment des propriétés d'auto-organisation.
 
-Cette émergence de comportement est étudiée dans les réseaux biologique, et a été beaucoup utilisée pour la création de nouveaux paradigmes d'apprentissage automatiques. 
+Cette émergence de comportement est étudiée dans les réseaux biologique, et a été beaucoup utilisée pour la création de nouveaux paradigmes d'apprentissage automatiques. }
 
 %
 %
