analyses et figures en draft mode

--- a/main.tex
+++ b/main.tex
@@ -72,7 +72,9 @@
 \input{02-SOM/SOM}
 \input{03-Representation/Representation}
 %\input{03-Algorithme/Algorithme}
+\draft{
 \input{04-Analyse/Analyse}
+}
 \input{Conclusion}
 %Bibliography files
 \bibliography{01-Modularite/biblio_modularite.bib,03-Representation/biblio_representation.bib}
